# SES_Group_Repo

./: .gitignore  .gitmodules  README.md
Lab/Lab1/: Lab1.ino  readSerial.py
Lab/Lab4/: Lab4.ino  Lab4.py
Presentations/: Class Diagram.drawio  G1_Presentation 3.pptx  Seq Diagram.drawio
ses_ws/.catkin_tools/profiles/default/: config.yaml  devel_collisions.txt
ses_ws/src/: .rosinstall  .rosinstall.bak
ses_ws/src/darknet_ros/darknet_ros/config/: ros.yaml
ses_ws/src/darknet_ros/darknet_ros/launch/: yolo_v3.launch
ses_ws/src/rotors_simulator/rotors_description/urdf/: firefly_base.xacro
ses_ws/src/rotors_simulator/rotors_gazebo/launch/: mav_hovering_example.launch
ses_ws/src/ses_planner/: CMakeLists.txt  package.xml
ses_ws/src/ses_planner/config/: voxblox_sim_config.yaml
ses_ws/src/ses_planner/include/: erc_map_manager.h  map_manager_voxblox_impl.h
ses_ws/src/ses_planner/launch/: ses_planner.launch
ses_ws/src/ses_planner/scripts/: rrg_utils.py
ses_ws/src/ses_planner/src/: map_manager_voxblox_erc.cpp  sesplanner_ros_node.cpp  voxblox_interface.cpp  voxbloxinterface_ros_node.cpp
ses_ws/src/ses_planner/srv/: checkBoxes.srv  checkLines.srv
ses_ws/src/velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
